data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1569.wast
;; 10. **Test Description**:    Condition-based loop termination within an `if` clause evaluated via `br_if`:    - Ensures that the condition evaluation and branching in `if` clauses adhere to structured control requirements, preventing infinite loops due to forward branch mismanagement.

(assert_invalid
  (module (func $condition-based-loop-termination
    (block $outer (if (i32.const 0)
      (then (loop $inner
        (br_if $outer (i32.const 1))
        (br $inner)
      ))
    ))
  ))
  "mismanaged forward branches"
)